Revert "release #8 (#9)"
This reverts commit 881ba45514098d4a12ce8bb031593a7cbec38244.